@@ -1,3 +1,6 @@
+Changelog v5.1.90 (2025-04-04):
+- Fixed Movies for Nyaa, Local, Cloud
+
 Changelog v5.1.89 (2025-04-04):
 - Added Animixplay
 
